<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ClassActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Schedule.AppBarOverlay">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.Schedule.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="90dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llNewTaskBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="85dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0" />

        <EditText
            android:id="@+id/etTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="@dimen/new_task_bottom_sheet_padding_horizontal"
            android:layout_marginStart="@dimen/new_task_bottom_sheet_padding_horizontal"
            android:layout_marginTop="15dp"
            android:background="@android:color/background_light"
            android:hint="@string/hint_task_title"
            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clActionsPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/new_task_bottom_sheet_padding_horizontal"
            android:layout_marginStart="@dimen/new_task_bottom_sheet_padding_horizontal">

            <ImageView
                android:id="@+id/ibSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_date_black_24dp"
                android:tint="@color/icon_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ibSetPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_no_priority_24dp"
                app:layout_constraintStart_toEndOf="@+id/ibSetDate"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ibSendTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_send_black_24dp"
                android:tint="@color/icon_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/etTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="@dimen/new_task_bottom_sheet_padding_horizontal"
            android:layout_marginStart="@dimen/new_task_bottom_sheet_padding_horizontal"
            android:layout_marginTop="15dp"

            android:background="@android:color/background_light"
            android:hint="@string/hint_task_description"
            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
            android:maxLines="10"
            android:minLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/llNewTaskBottomSheet"
        app:layout_anchorGravity="top|end"
        app:srcCompat="@drawable/ic_add_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>