<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_date_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
